# parallel_image_editor_in_rust

./: Cargo.toml  README.md
assets/: main.css
src/: app_router.rs  customlib.rs  dioxusui.rs  main.rs  renderer.rs  shader.wgsl
src/components/: cropbox.rs  draggable_panel.rs  draggable_resizeable_panel.rs  footer.rs  gallery.rs  image_board.rs  menu_bar.rs  mod.rs  side_bar.rs
src/state/: app_state.rs  customlib.rs  mod.rs  providers.rs  shader.wgsl
src/utils/: draggable.rs  mod.rs  renderer.rs  resizeable.rs  upload_img.rs  utils.rs
