[package]
name = "parallel_image_editor_in_rust"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
dioxus = { version = "0.6.3", features = ["router"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
image = "0.25.6"
wgpu = { version = "26.0.1", features = ["webgl"] }
bytemuck = { version = "1.16", features = [ "derive" ] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
